[package]
name = "mina-signer-wasm"
version = "0.1.0"

edition = "2021"
license = "MIT"

publish = false

[dependencies]
# mina-curves = {path = "../proof-systems/curves"}
# mina-hasher = {path = "../proof-systems/hasher"}
# mina-signer = {path = "../proof-systems/signer"}
# o1-utils = {path = "../proof-systems/utils"}

mina-curves = {git = "https://github.com/hanabi1224/proof-systems", rev = "158950c77072e341762d240f97d129eacb941569"}
mina-hasher = {git = "https://github.com/hanabi1224/proof-systems", rev = "158950c77072e341762d240f97d129eacb941569"}
mina-signer = {git = "https://github.com/hanabi1224/proof-systems", rev = "158950c77072e341762d240f97d129eacb941569"}
o1-utils = {git = "https://github.com/hanabi1224/proof-systems", rev = "158950c77072e341762d240f97d129eacb941569"}

bin-prot = {git = "https://github.com/ChainSafe/mina-rs", rev = "0b4883170505cadad2edc2d041330b2433f762fa"}
mina-rs-base = {git = "https://github.com/ChainSafe/mina-rs", rev = "0b4883170505cadad2edc2d041330b2433f762fa"}
mina-serialization-types = {git = "https://github.com/ChainSafe/mina-rs", rev = "0b4883170505cadad2edc2d041330b2433f762fa"}

ark-ec = "0.3"
ark-ff = "0.3"
blake2 = "0.10"
bs58 = {version = "0.4", features = ["check"]}
derive_more = "0.99"
hex = "0.4"
js-sys = "0.3"
lockfree-object-pool = "0.1"
num-bigint = "0.4"
num-traits = "0.2"
once_cell = "1"
rand = "0.8"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = {version = "0.2", features = ["js"]}

[dev-dependencies]
wasm-bindgen-test = "0.3"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 's'
